--- a/interface.ui
+++ b/interface.ui
@@ -13,10 +13,16 @@
     <height>480</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>300</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="centralWidget">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -37,7 +43,7 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="QFrame" name="frame">
+     <widget class="QFrame" name="mainFrame">
       <property name="enabled">
        <bool>true</bool>
       </property>
@@ -79,11 +85,11 @@
         <number>10</number>
        </property>
        <item>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <layout class="QVBoxLayout" name="mainLayout">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <layout class="QHBoxLayout" name="inputLayout">
            <item>
-            <widget class="QFrame" name="frame_3">
+            <widget class="QFrame" name="inputFrame">
              <property name="palette">
               <palette>
                <active>
@@ -204,7 +210,7 @@
                <number>3</number>
               </property>
               <item>
-               <widget class="QPlainTextEdit" name="plainTextEdit">
+               <widget class="QPlainTextEdit" name="input">
                 <property name="styleSheet">
                  <string notr="true">background-color: rgb(255, 250, 240)</string>
                 </property>
@@ -225,7 +231,7 @@
           </layout>
          </item>
          <item>
-          <widget class="QFrame" name="frame_2">
+          <widget class="QFrame" name="langFrame">
            <property name="palette">
             <palette>
              <active>
@@ -331,7 +337,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_5">
+             <layout class="QHBoxLayout" name="langLayout">
               <property name="leftMargin">
                <number>50</number>
               </property>
@@ -339,7 +345,7 @@
                <number>50</number>
               </property>
               <item>
-               <widget class="QLabel" name="label">
+               <widget class="QLabel" name="labelTranslateFrom">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -355,7 +361,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="comboBox">
+               <widget class="QComboBox" name="langFrom">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                   <horstretch>0</horstretch>
@@ -363,10 +369,10 @@
                  </sizepolicy>
                 </property>
                 <property name="currentText">
-                 <string>Английского</string>
+                 <string>Русского</string>
                 </property>
                 <property name="currentIndex">
-                 <number>0</number>
+                 <number>1</number>
                 </property>
                 <item>
                  <property name="text">
@@ -381,7 +387,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QLabel" name="label_2">
+               <widget class="QLabel" name="labelTranslateTo">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -397,7 +403,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="comboBox_2">
+               <widget class="QComboBox" name="langTo">
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
@@ -409,6 +415,9 @@
                 </property>
                 <property name="editable">
                  <bool>false</bool>
+                </property>
+                <property name="currentIndex">
+                 <number>1</number>
                 </property>
                 <item>
                  <property name="text">
@@ -428,9 +437,12 @@
           </widget>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <layout class="QHBoxLayout" name="translateBtnLayout">
+           <property name="sizeConstraint">
+            <enum>QLayout::SetMinimumSize</enum>
+           </property>
            <item>
-            <widget class="QPushButton" name="TranslateBtn">
+            <widget class="QPushButton" name="translateBtn">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -439,7 +451,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>150</width>
+               <width>200</width>
                <height>30</height>
               </size>
              </property>
@@ -481,50 +493,57 @@
           </layout>
          </item>
          <item>
-          <widget class="QFrame" name="frame_4">
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(239, 255, 255)</string>
+          <layout class="QHBoxLayout" name="outputLayout" stretch="0">
+           <property name="bottomMargin">
+            <number>0</number>
            </property>
-           <property name="frameShape">
-            <enum>QFrame::Panel</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Raised</enum>
-           </property>
-           <property name="lineWidth">
-            <number>4</number>
-           </property>
-           <layout class="QVBoxLayout" name="verticalLayout_5">
-            <property name="leftMargin">
-             <number>3</number>
-            </property>
-            <property name="topMargin">
-             <number>3</number>
-            </property>
-            <property name="rightMargin">
-             <number>3</number>
-            </property>
-            <property name="bottomMargin">
-             <number>3</number>
-            </property>
-            <item>
-             <widget class="QPlainTextEdit" name="plainTextEdit_2">
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(255, 250, 240)</string>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::Panel</enum>
-              </property>
-              <property name="lineWidth">
+           <item>
+            <widget class="QFrame" name="outputFrame">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(239, 255, 255)</string>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::Panel</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <property name="lineWidth">
+              <number>4</number>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_5">
+              <property name="leftMargin">
                <number>3</number>
               </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+              <property name="topMargin">
+               <number>3</number>
+              </property>
+              <property name="rightMargin">
+               <number>3</number>
+              </property>
+              <property name="bottomMargin">
+               <number>3</number>
+              </property>
+              <item>
+               <widget class="QPlainTextEdit" name="output">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(255, 250, 240)</string>
+                </property>
+                <property name="frameShape">
+                 <enum>QFrame::Panel</enum>
+                </property>
+                <property name="lineWidth">
+                 <number>3</number>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </item>
@@ -549,6 +568,13 @@
     <addaction name="about"/>
     <addaction name="creator"/>
    </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Настройки</string>
+    </property>
+    <addaction name="action"/>
+   </widget>
+   <addaction name="menu"/>
    <addaction name="Help"/>
   </widget>
   <action name="about">
@@ -569,6 +595,11 @@
   <action name="mini">
    <property name="text">
     <string>Мини</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>Словари</string>
    </property>
   </action>
  </widget>
